		to the new.
		Moving old main files into src/old_main/ (for clarity).
20090728	Including screenshots in auto generated machines.html.
		Finally managed to implement cycle-accurate continuous
		execution of multiple components at different speeds. :-)
		RAMComponent now clears ram on reset.
		Implementing a symbol registry for the new framework (which
		is per CPU).
20090729	Slowly beginning to reimplement dyntrans in C++: Beginning on
		the CPUComponent::DyntransExecute core loop, and some
		basic structures. MIPS and M88K cpus call DyntransExecute.
20090731	Continuing on the new dyntrans core. The first instruction (a
		M88K subu) can be executed on a dummy IC page.
		[Re]implementing some simple MIPS and M88K instructions.
		Arguments can now be passed during component creation, e.g.
		nr CPUs, CPU model, or ram amount for a template machine.
		Adding a 'raw' file loader, and a dummy SGI IP32 template.
20090801	Two MIPS16 instructions can be disassembled; disassembly
		address is now not necessarily the same as m_pc (e.g. on
		MIPS16, the lowest bit is cleared).
		Beginning on implementing branches: the MIPS "b" instruction,
		with delay slot (both continuous execution, and single-stepping
		with pause in the middle of the branch, etc).
		Continuing on the dyntrans core loop (inlined instruction calls
		first, then run a few remaining calls).
20090802	Implementing a skeleton implementation for the backward-step
		command (but since variable write handlers aren't implemented
		yet, it doesn't really work).
		Updating the Introduction chapter in the documentation with
		a section about the New framework.
		Beginning on M88K bsr and jmp.n instruction implementations,
		function call trace support, etc.
20090803	Continuing on function call trace support.
20090804	Using anonymous unions and ptrdiff_t, to avoid overloading
		pointers and size_t members unsafely, and other size_t usage.
		(Thanks to Weinholt for commenting on this.)